Attempt to fix build